[tool.poetry]
name = "linear_segment"
version = "1.2.1"
description = "Python package for Bayesian Change Point and Circular Binary Segmentation"
authors = ["Kyle S. Smith <kyle.smith@stjude.org>"]
maintainers = ["Kyle S. Smith <kyle.smith@stjude.org>"]
repository = "https://github.com/kylessmith/linear_segment"
documentation = "https://www.biosciencestack.com/static/linear_segment/docs/index.html"
keywords = ["cython", "bayesian", "changepoint", "circular", "segment", "c"]
readme = 'README.md'
license = "GPL-2.0-or-later"
classifiers = [ "Development Status :: 4 - Beta",
                    "Environment :: Console",
                    "Intended Audience :: Developers",
                    "Intended Audience :: Science/Research",
                    "Operating System :: POSIX :: Linux",
                    "Programming Language :: Cython",
                    "Programming Language :: Python",
                    "Programming Language :: Python :: 3",
                    "Programming Language :: Python :: 3.6",
                    "Topic :: Scientific/Engineering",
                    "Topic :: Scientific/Engineering :: Mathematics",
                    "Topic :: Software Development :: Libraries",
                    "Topic :: Software Development :: Libraries :: Python Modules",
                    "Topic :: Scientific/Engineering :: Bio-Informatics"
                  ]
packages = [{ include = "linear_segment" }]
include = ["linear_segment/*.pyx", "linear_segment/*.pxd", "linear_segment/src/*.h", "linear_segment/src/*.c", "linear_segment/**/*.so"]

[tool.poetry.dependencies]
python = ">=3.10"
numpy = ">=1.23.5"
cython = "^3.0.0"
ailist = "^2.1.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0",
            "cython>=3.0.0",
            "numpy>=1.23.5",
            "setuptools>=65.5.0",
            "ailist>=2.1.3"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.build]
generate-setup-file = false
script = "build.py"

[tool.cibuildwheel]
skip = "cp36-* cp37-* pp37-* *-manylinux_i686 *_ppc64le *_s390x *-musllinux*"
build-verbosity = "3"

[tool.cython-lint]
max-line-length = 100
ignore = ['W191','E265','E303','E101','E128']